--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -20,7 +20,6 @@
 "images_limit" = "Вы можете прикрепить не более 3-х изображений";
 "minimum_choices" = "Необходимо минимум 2 варианта";
 "minimum_limits" = "Минимальное количество участников - 10";
-"insufficient_balance" = "У Вас недостаточно баллов для публикации";
 "replies" = "Ответы";
 "replies_total" = "ответов";
 "reply" = "Ответить";
@@ -236,7 +235,6 @@
 "comments_disabled" = "Комментарии отключены";
 "voters_limit" = "Лимит";
 "voters_limit_description" = "Лимит участников";
-"hot_option" = "Горячий старт";
 "voters_option" = "Количество участников";
 
 "choose_topic" = "Выберите раздел";
@@ -448,8 +446,12 @@
 "new_poll_hot_on" = "Опрос будет опубликован в ленте Горячие";
 "new_poll_hot_off" = "Опрос не будет опубликован в ленте Горячие";
 "new_poll_limit" = "Число участников";
-"new_poll_limit_placeholder" = "Опрос закроется при достижении указанного количества голосов";
-"new_poll_limit_hint" = "Опрос закроется при достижении указанного количества голосов";
-"new_poll_limit" = "Стоимость публикации";
+"new_poll_limit_placeholder" = "Публикация исчезнет из ленты по достижению полученных голосов пользователей";
+"new_poll_limit_hint" = "Публикация исчезнет из ленты по достижению полученных голосов пользователей";
+"new_poll_cost" = "Стоимость публикации";
 "balance" = "Баланс";
 "total_bill" = "Итого";
+"hot_option" = "Горячий старт";
+"publication_preview" = "Предпросмотр";
+"insufficient_balance" = "У Вас недостаточно баллов для публикации";
+"insufficient_balance" = "У Вас недостаточно баллов для публикации";
