--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -415,39 +415,43 @@
 //New poll
 "new_poll_readiness" = "Readiness";
 "new_poll_topic" = "Topic";
+"new_poll_topic_placeholder" = "Choosing the right topic for posting";
 "new_poll_title" = "Title";
 "new_poll_title_placeholder" = "Enter title";
 "new_poll_survey_min_text_length_error_begin" = "The field must be at least ";
 "new_poll_survey_min_text_length_error_end" = " characters";
 "new_poll_description" = "Description";
-"new_poll_description_placeholder" = "Enter description";
+"new_poll_description_placeholder" = "Describe the purpose of the publication so that the participants make an unmistakable choice";
 "new_poll_question" = "Question";
-"new_poll_question_placeholder" = "Ask question";
+"new_poll_question_placeholder" = "Ask a question to which each participant will give their own answer";
 "new_poll_choices" = "Сhoices";
+"new_poll_choices_placeholder" = "Give several answers from which the participants will make their choice";
 "new_poll_choice_placeholder" = "Choice №";
 "new_poll_choice_add" = "Add choice";
 "new_poll_choice_next" = "Next";
 "new_poll_survey_choice_delete_notification" = "The survey must contain at least two possible answers";
 "new_poll_images" = "Images";
+"new_poll_images_placeholder" = "You can add images to the post description";
 "new_poll_image_add" = "Add image";
 "new_poll_image_placeholder" = "Add details (optional)";
 "new_poll_hyperlink" = "Hyperlink";
-"new_poll_hyperlink_placeholder" = "Add hyperlink (optional)";
+"new_poll_hyperlink_placeholder" = "You can add a link to a web resource to the post description";
+"new_poll_hyperlink_tf_placeholder" = "Add hyperlink (optional)";
 "new_poll_comments" = "Comments";
-"new_poll_comments_placeholder" = "Availability of comments";
-"new_poll_comments_on" = "Сomments are allowed";
-"new_poll_comments_off" = "Comments are forbidden";
+"new_poll_comments_placeholder" = "You can enable the ability to leave comments under the publication";
+"new_poll_comments_on" = "Сomments are allowed✅";
+"new_poll_comments_off" = "Comments are forbidden⛔️";
 "new_poll_anonymity" = "Anonymity";
-"new_poll_anonymity_placeholder" = "Anonymity option";
+"new_poll_anonymity_placeholder" = "You can turn on the anonymity mode, in this mode you can not see who exactly took part";
 "new_poll_anonymity_on" = "Author, voters and commentators are hidden";
 "new_poll_anonymity_off" = "Author, voters and commentators see each other";
 "new_poll_hot" = "Hot feed";
-"new_poll_hot_placeholder" = "Opportunity for additional points to get into the Hot feed";
+"new_poll_hot_placeholder" = "You can post your post in the Hot feed to get an instant response";
 "new_poll_hot_on" = "The poll will be published in the Hot feed";
 "new_poll_hot_off" = "The poll won't be published in the Hot feed";
 "new_poll_limit" = "Number of participants";
-"new_poll_limit_placeholder" = "The publication will disappear from the feed when it reaches the received user votes";
-"new_poll_limit_hint" = "TThe publication will disappear from the feed when it reaches the received user votes";
+"new_poll_limit_placeholder" = "Specify the minimum number of responses of the publication participants that you want to receive";
+"new_poll_limit_hint" = "The publication will disappear from the feed when it reaches the received user votes";
 "new_poll_cost" = "Publication cost";
 "balance" = "Balance:";
 "total_bill" = "Total";
