--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -415,38 +415,42 @@
 //New poll
 "new_poll_readiness" = "Готовность";
 "new_poll_topic" = "Тема";
+"new_poll_topic_placeholder" = "Выбор подходящей темы для размещения публикации";
 "new_poll_title" = "Титул";
-"new_poll_title_placeholder" = "Введите название";
+"new_poll_title_placeholder" = "Краткое название публикации";
 "new_poll_survey_min_text_length_error_begin" = "Поле должно состоять минимум из ";
 "new_poll_survey_min_text_length_error_end" = " знаков";
 "new_poll_description" = "Подробности";
-"new_poll_description_placeholder" = "Введите подробности";
+"new_poll_description_placeholder" = "Опишите цель публикации, чтобы участники сделали безошибочный выбор";
 "new_poll_question" = "Вопрос";
-"new_poll_question_placeholder" = "Сформулируйте вопрос";
+"new_poll_question_placeholder" = "Задайте вопрос, на который каждый участник даст свой ответ";
 "new_poll_choices" = "Варианты ответов";
 "new_poll_choice_placeholder" = "Вариант №";
+"new_poll_choices_placeholder" = "Дайте несколько ответов, из которых участники будут делать свой выбор";
 "new_poll_choice_add" = "Добавить вариант";
 "new_poll_choice_next" = "Далее";
 "new_poll_survey_choice_delete_notification" = "Опрос должен содержать минимум два варианта ответа";
 "new_poll_images" = "Изображения";
+"new_poll_images_placeholder" = "Вы можете добавить изображения к описанию публикации";
 "new_poll_image_add" = "Добавить изображение";
 "new_poll_image_placeholder" = "Добавьте описание (опционально)";
 "new_poll_hyperlink" = "Ссылка";
-"new_poll_hyperlink_placeholder" = "Добавьте ссылку (опционально)";
+"new_poll_hyperlink_placeholder" = "Вы можете добавить ссылку на веб ресурс к описанию публикации";
+"new_poll_hyperlink_tf_placeholder" = "Добавьте ссылку (опционально)";
 "new_poll_comments" = "Комментарии";
-"new_poll_comments_placeholder" = "Доступность комментариев";
-"new_poll_comments_on" = "Комментарии разрешены";
-"new_poll_comments_off" = "Комментарии запрещены";
+"new_poll_comments_placeholder" = "Вы можете включить возможность оставлять комментарии под публикацией";
+"new_poll_comments_on" = "Комментарии разрешены✅";
+"new_poll_comments_off" = "Комментарии запрещены⛔️";
 "new_poll_anonymity" = "Анонимность";
-"new_poll_anonymity_placeholder" = "Анонимность автора";
+"new_poll_anonymity_placeholder" = "Вы можете включить режим анонимности, в этом режиме нельзя увидеть кто именно принимал участие";
 "new_poll_anonymity_on" = "Автор, голосующие и комментаторы скрыты";
 "new_poll_anonymity_off" = "Автор, голосующие и комментаторы видят друг друга";
 "new_poll_hot" = "Лента Горячие";
-"new_poll_hot_placeholder" = "Возможность за дополнительные баллы попасть в ленту Горячие";
+"new_poll_hot_placeholder" = "Вы можете разместить свою публикацию в разделе Горячие, чтобы получить мгновенный отклик";
 "new_poll_hot_on" = "Опрос будет опубликован в ленте Горячие";
 "new_poll_hot_off" = "Опрос не будет опубликован в ленте Горячие";
-"new_poll_limit" = "Число участников";
-"new_poll_limit_placeholder" = "Публикация исчезнет из ленты по достижению полученных голосов пользователей";
+"new_poll_limit" = "Количество участников";
+"new_poll_limit_placeholder" = "Укажите минимальное количество ответов участников публикации, которое вы хотите получить";
 "new_poll_limit_hint" = "Публикация исчезнет из ленты по достижению полученных голосов пользователей";
 "new_poll_cost" = "Стоимость публикации";
 "balance" = "Баланс";
