start-->sign in transition 10%

--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -111,7 +111,7 @@
 "getStartedButton" = "Get started!";
 
 //Signup VC
-"providerLabel" = "or continue with";
+"providerLabel" = "or";
 "haveAccountLabel" = "Already have account?";
 "loginButton" = "Log in";
 "signupButton" = "Sign up";
