--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -111,6 +111,7 @@
 "getStartedButton" = "Get started!";
 
 //Signup VC
+"new_account" = "New account";
 "providerLabel" = "or";
 "haveAccountLabel" = "Already have account?";
 "loginButton" = "Log in";
