--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -397,6 +397,7 @@
 "account_delete_description" = "Удаление аккаунта - необратимое действие. Продолжить?";
 "account_location_empty" = "Пожалуйста, заполните Ваше местонахождение";
 "claim" = "Жалоба";
+"account_fill_in" = "Заполните информацию о себе и выберите изображение профиля";
 
 //Userprofile
 "userprofile" = "Профиль";
