--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -114,6 +114,8 @@
 "new_account" = "New account";
 "providerLabel" = "or";
 "haveAccountLabel" = "Already have account?";
+"dont_have_account_yet" = "New to this app?";
+"registration" = "Sign up";
 "loginButton" = "Log in";
 "signupButton" = "Sign up";
 "usernameTF" = "Username";
@@ -127,7 +129,7 @@
 "email_verification_code_sent" = "An email with a verification code has been sent to:";
 "email_not_delivered" = "Haven't received code?";
 "repeat_after" = "Repeat after ";
-"resend_mail" = "Resend";
+"resend_mail" = "Send new code";
 "verification_code" = "Verification code";
 "invalid_verification_code" = "Invalid code";
 "password_is_short" = "Password is too short";
@@ -164,6 +166,7 @@
 "birthDateTF" = "Birth date";
 "cityTF" = "City";
 "city_placeholder" = "Enter city";
+"fill_necessary_fields" = "Please, fill in the required fields: ";
 
 //Hot VC
 "hot" = "Hot";
@@ -206,8 +209,8 @@
 "poll_complete_at" = "Poll is completed at";
 "voted" = "Voted";
 "most_popular_choice" = "Your choice is in trend";
-"got_points" = "You got ";
-"points" = " points";
+"got_points" = "Thank you! You received ";
+"points" = " point(s)";
 "support_poll" = "Support poll";
 "next" = "Next";
 "comment_posted" = "Comment posted";
@@ -228,6 +231,14 @@
 "poll" = "Poll";
 "new_single" = "New";
 "poll_rating_difference" = "What's the difference?";
+
+//Reset password
+//"reset_password_title" = "";
+"password_reset_link_title" = "Forgot\npassword?";
+"password_reset_link_description" = "Please enter your email address to request a password reset";
+"password_reset_link_sent_description" = "We have sent password recover instructions to your email";
+"password_reset_link_sent_title" = "Check your email";
+"send_password_reset_link" = "Send";
 
 //PollCreationView
 "new_poll" = "New poll";
