settings vc email added

--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -120,10 +120,14 @@
 "signupButton" = "Sign up";
 "usernameTF" = "Username";
 "mailTF" = "Email";
+"mail_example_placeholder" = "yourmail@example.domain";
 "passwordTF" = "Password";
 "username_is_busy" = "Username is already used";
 "username_is_empty" = "Username is not filled";
 "username_is_short" = "Username is too short";
+"email_confirm_reminder" = "Confirm your email in case you forgot your password";
+"email_is_empty_reminder" = "Enter your email in case you forgot your password";
+"email_is_confirmed" = "Email is confirmed";
 "email_is_busy" = "Email is already used";
 "email_is_empty" = "Email is incorrect";
 "email_verification_code_sent" = "An email with a verification code has been sent to:";
@@ -414,12 +418,13 @@
 "userprofile" = "Profile";
 "userprofile_is_in_community" = "Is in community";
 "userprofile_subscribers" = "Subscribers";
+"userprofile_subscriptions" = "Subscriptions";
 "userprofile_about" = "About me";
 "userprofile_publications_created" = "Publications posted";
 "userprofile_community_contribution" = "Сontribution to the community";
 "userprofile_votes_received" = "Votes received";
-"userprofile_comments_received" = "Comments received";
-"userprofile_comments_posted" = "Comments posted";
+"userprofile_comments_received" = "Responses received";
+"userprofile_comments_posted" = "Comments";
 "userprofile_compatibility" = "Compatibility";
 "userprofile_compatibility_level" = "compatibility level";
 "userprofile_compatibility_level_with_user" = "Your compatibility with ";
