--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -120,10 +120,14 @@
 "signupButton" = "Зарегистрироваться";
 "usernameTF" = "Логин";
 "mailTF" = "Электронная почта";
+"mail_example_placeholder" = "yourmail@example.domain";
 "passwordTF" = "Пароль";
 "username_is_busy" = "Пользователь существует";
 "username_is_empty" = "Поле пустое";
 "username_is_short" = "Недостаточно символов";
+"email_confirm_reminder" = "Подтвердите электронную почту на случай утери пароля";
+"email_is_empty_reminder" = "Укажите электронную почту на случай утери пароля";
+"email_is_confirmed" = "Электронная почта подтверждена";
 "email_is_busy" = "Электронная почта уже используется";
 "email_is_empty" = "Некорректный формат почты";
 "email_verification_code_sent" = "Электронное письмо с кодом подтверждения было отправлено на адрес:";
@@ -414,12 +418,13 @@
 "userprofile" = "Профиль";
 "userprofile_is_in_community" = "В сообществе";
 "userprofile_subscribers" = "Подписчиков";
+"userprofile_subscriptions" = "Подписок";
 "userprofile_about" = "Обо мне";
 "userprofile_publications_created" = "Публикаций создано";
 "userprofile_community_contribution" = "Вклад в сообщество";
 "userprofile_votes_received" = "Голосов получено";
-"userprofile_comments_received" = "Комментариев получено";
-"userprofile_comments_posted" = "Комментариев оставлено";
+"userprofile_comments_received" = "Ответов получено";
+"userprofile_comments_posted" = "Комментариев";
 "userprofile_compatibility" = "Совместимость";
 "userprofile_compatibility_level" = "уровень совместимости";
 "userprofile_compatibility_level_with_user" = "Ваш уровень совместимости с ";
