Push notifications debugging done

--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -493,3 +493,6 @@
 
 // Push notifications
 "pn_new_post" = "%@ разместил новую публикацию";
+"pn_own_post_completed_title" = "Ваш опрос завершился!";
+"pn_own_post_completed" = "Посмотрите результаты 🔍";
+
