--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -493,3 +493,6 @@
 
 // Push notifications
 "pn_new_post" = "%@ posted a new post";
+"pn_own_post_completed_title" = "Your post has ended!";
+"pn_own_post_completed" = "See the results 🔍";
+
