Start screen UI done EmptyHotCard UI done Transition from auth to app done

--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -176,7 +176,7 @@
 //Hot VC
 "hot" = "Горячие";
 "searching" = "Поиск";
-"waiting_for_new_posts" = "Ожидание публикаций";
+"waiting_for_new_posts" = "Ждем публикации";
 "hot_participate" = "Участвовать";
 "create_post" = "Cоздать публикацию";
 
