--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -434,13 +434,13 @@
 "userprofile_compatibility_level" = "уровень совместимости";
 "userprofile_compatibility_level_with_user" = "Ваш уровень совместимости с ";
 "userprofile_compatibility_level_with_user_is" = " ";
-"userprofile_compatibility_level_zero" = "Ваши интересы не пересекаются";
-"userprofile_compatibility_level_ultra_low" = "очень низкий";
-"userprofile_compatibility_level_low" = "низкий";
-"userprofile_compatibility_level_middle" = "средний";
-"userprofile_compatibility_level_high" = "высокий";
-"userprofile_compatibility_level_ultra_high" = "очень высокий";
-"userprofile_compatibility_level_max" = "максимальный";
+"userprofile_compatibility_level_zero" = "Интересы не совпадают";
+"userprofile_compatibility_level_ultra_low" = "очень низкая";
+"userprofile_compatibility_level_low" = "низкая";
+"userprofile_compatibility_level_middle" = "средняя";
+"userprofile_compatibility_level_high" = "высокая";
+"userprofile_compatibility_level_ultra_high" = "очень высокая";
+"userprofile_compatibility_level_max" = "максимальная";
 "userprofile_contrib_hint" = "Интересующие пользователя темы, которые он обсудил с сообществом";
 "userprofile_сompatibility_hint" = "Индикатор расчитывается на основании результатов опросов, в которых вы оба участвовали";
 
