--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -193,7 +193,6 @@
 "all_time" = "все время";
 "per_all_time" = "за все время";
 "cancel_subscription" = "Отказаться от подписки";
-"zero_subscriptions" = "Подписок нет";
 
 //List VC
 "list" = "Лента";
@@ -502,3 +501,10 @@
 "pn_own_post_completed_title" = "Ваш опрос завершился!";
 "pn_own_post_completed" = "Посмотрите результаты 🔍";
 
+// EmptyPublicationsView
+"empty_pub_view_subscriptions" = "Подписок нет";
+"empty_pub_view_new" = "Нет новых публикаций\nза указанный период";
+"empty_pub_view_top" = "Нет топовых публикаций\nза указанный период";
+"empty_pub_view_own" = "Нет своих публикаций\nза указанный период";
+"empty_pub_view_watching" = "Нет отслеживаемых публикаций\nза указанный период";
+"empty_pub_view_default" = "Нет публикаций\nза указанный период";
