Complete/vote animations, ui/uix bug fix

--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -403,7 +403,7 @@
 "watch_survey_notification" = "You'll be notified about the results when publication finishes";
 "survey_finished_notification" = "Survey finished!";
 "survey_finished_vote_notification" = "Survey finished. But you can vote!";
-"survey_banned_notification" = "Publication has been banned";
+"survey_banned_notification" = "Banned";
 "survey_complete_notification" = "Survey complete";
 "open_url_embedded" = "Open in app";
 "open_url_in_app" = "Open in ";
