--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -14,8 +14,8 @@
 "timeout_error" = "Превышено время ожидания";
 "tiktok_web_error" = "Ошибка при загрузке TikTok";
 "image_loading_error" = "Произошла ошибка, изображение не было загружено";
-"maximum_characters_exceeded" = "Превышено максимальное количество: ";
-"minimum_characters_needed" = "Минимальное количество знаков: ";
+"maximum_characters_exceeded" = "Превышено максимальное количество символов - ";
+"minimum_characters_needed" = "Минимальное количество символов - ";
 "invalid_url" = "Некорректный формат ссылки";
 "images_limit" = "Вы можете прикрепить не более 3-х изображений";
 "minimum_choices" = "Необходимо минимум 2 варианта";
@@ -328,7 +328,7 @@
 "share" = "Поделиться";
 "watch" = "Отслеживать";
 "don't_watch" = "Не отслеживать";
-"vote_to_view_comments" = "Сначала пройдите опрос";
+"vote_to_view_comments" = "Пожалуйста, сначала пройдите опрос";
 "added_to_watch_list" = "Результаты опроса отслеживается";
 "votes_total" = "Голосов";
 "voters" = "Проголосовашие";
@@ -497,10 +497,11 @@
 "minimum_votes" = "Минимальное количество голосов: ";
 
 // Push notifications
-"pn_new_post" = "%@ разместил новую публикацию";
-"pn_own_post_completed_title" = "Ваш опрос завершился!";
+"pn_new_post" = "%@ разместил новую публикацию ⚡️";
+"pn_own_post_completed_title" = "Ваш опрос завершился 🏁";
 "pn_own_post_completed" = "Посмотрите результаты 🔍";
-
+"pn_new_comment_reply" = "%@ ответил на Ваш комментарий: %@";
+ 
 // EmptyPublicationsView
 "empty_pub_view_subscriptions" = "Подписок нет";
 "empty_pub_view_new" = "Нет новых публикаций\nза указанный период";
